--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         </section>
 
         <section class="secao certificados">
-            <h2>certificados</h2>
+            <h2>Certificados</h2>
 
             <article class="item-certificado">
                 <h3>2023 - Modelagem 3D: introdução ao mundo da criação tridimensional - Semana de Engenharia Mecatrônica (WeekTron 2023)</h3>
