--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header class="perfil">
         <img src="Imagem do WhatsApp de 2025-10-23 à(s) 18.56.12_482d8138.jpg" alt="Foto de Perfil de Daniela Santos Machado" class="foto-perfil">
         <h1>Daniela Santos Machado</h1>
-        <p>24 Anos | (61) 98470-4418</p>
+        <p>24 Anos | (61) 98470 - 4418</p>
         <p>Desenvolvedora Web inicial | Trainee na Empresa Júnior EngNet</p>
 
         <nav class="links-sociais">
